<resources>
    <string name="app_name">Raman\'s Android Labs</string>
    <string name="textview1">Enter Password\n</string>
    <string name="login">Login\n</string>
    <string name="PasswordCheckPassed">Your password meets the requirements</string>
    <string name="PasswordTestFail">You shall not pass!</string>
    <string name="message_goes_here">message goes here</string>
    <string name="time_goes_here">time goes here</string>
    <string name="message_goes_here1">message goes here</string>
    <string name="time_goes_here1">time goes here</string>
    <string name="send_button">send</string>
    <string name="recieve_button">receive</string>
    <string name="Deletemsg">"Do you want to delete this message: "</string>
    <string name="title">Question</string>
    <string name="no">No</string>
    <string name="yes">yes\n</string>
    <string name="Deletesuccess">You deleted message#\n</string>
    <string name="undo">Undo</string>
    <string name="confirm_delete_all_messages">Delete all messages?</string>
    <string name="all_messages_deleted">Messages deleted</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="about">about</string>
</resources>